--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "cartodb": "^0.5.1",
     "eslint": "^3.2.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-webpack": "^0.7.0",
